--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 	<section class="slide" id="about">
 		<h2>About botfabrik.ch</h2>
 		<ul>
-			<li>Quesiton: Is there a market for bot development?</li>
+			<li>Question: Is there a market for bot development in Switzerland?</li>
 			<li class="next">Goal: A bot that sells bots</li>
 			<li class="next">About 2 weeks of development</li>
-			<li class="next">About 5 weeks online</li>
+			<li class="next">About 6 weeks online</li>
 			<li class="next">Initiative by Apptiva AG <img class="logo" src="pictures/logo_narrow.svg" alt="Apptiva logo"></li>
 		</ul>
 		<style>
