Contact information at the end

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
 			<img src="pictures/logo.svg" alt="logo">
 			Thank you
 		</h2>
+		<ul>
+			<li>philip@botfabrik.ch</li>
+			<li>@pschonholzer</li>
+		</p>
 		<style>
 			#see-more h2 {
 				font-size:100px
@@ -164,6 +168,13 @@
 				height: 2em;
 				margin: -0.6em 0.3em;
 				}
+			#see-more ul {
+				position: absolute;
+				z-index: 10;
+				top: 64%;
+				left: 39%;
+				color: white;
+			}
 		</style>
 	</section>
 
